# repo_template

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  readme.md  tests.py
.github/workflows/: format.yml  pylint.yml  pytest.yml
src/: main.py
tests/: test_main.py
